fixed refs going too low

--- a/src/screens/aboutMe/aboutMe.css
+++ b/src/screens/aboutMe/aboutMe.css
@@ -6,6 +6,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    scroll-margin-top: 100px;
 }
 
 .about__container img {
