--- a/src/screens/technologies/technologies.css
+++ b/src/screens/technologies/technologies.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding: 3rem;
+    scroll-margin-top: 100px;
 }
 
 .tech__cards__container{
